Fix kc provider rendering (box spacing)

--- a/public/files/css/view.less
+++ b/public/files/css/view.less
@@ -168,8 +168,8 @@
         > .contents {
             display: grid;
 
-            > div.box:not(:first-child) h3.block {
-                margin-top: 1.5em;
+            > div.box:not(:first-child) {
+                margin-top: 1.7em;
             }
 
             > div.box:first-child h3.block {
@@ -196,6 +196,10 @@
                             vertical-align: middle;
                             margin-right: 0.3em;
                         }
+                    }
+
+                    .KwicConnectWidget:not(:first-child) {
+                        margin-top: 2em;
                     }
                 }
 
