--- a/public/files/js/plugins/defaultKwicConnect/style.less
+++ b/public/files/js/plugins/defaultKwicConnect/style.less
@@ -44,7 +44,7 @@
     }
 
     .provider-block {
-        margin-top: 1em;
+        margin-top: 0.1em;
 
         .base-word {
             font-size: 1.3em;
